<resources>
    <string name="app_name">CheckBoxAppAndroid</string>
    <string name="txt_numero1">Ingrese Primer Valor</string>
    <string name="txt_numero2">Ingrese Segundo Valor</string>
    <string name="chek_Sumar">Sumar</string>
    <string name="check_Restar">Restar</string>
    <string name="Mostrar_Resultado">Mostrar Resultado</string>
    <string name="Botton_Calcular">Calcular</string>
    </resources>