<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt_num1"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="192dp"
        android:ems="10"
        android:hint="@string/txt_numero1"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_numero2"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/txt_numero2"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_num1" />

    <CheckBox
        android:id="@+id/chk_boxSumar"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:text="@string/chek_Sumar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_numero2" />

    <CheckBox
        android:id="@+id/chk_BoxRestar"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/check_Restar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chk_boxSumar" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:onClick="Calcular"
        android:text="@string/Botton_Calcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chk_BoxRestar" />

    <TextView
        android:id="@+id/txt_Resultado"
        android:layout_width="387dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/Mostrar_Resultado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>